--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="splash_background">#FF2A2E39</color>
+    <color name="white_logo">#FFFFFFFF</color>
+    <color name="antenas_color">#FF26D2A0</color>
 </resources>
