--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="splash_background"> #FF26D2A0</color>
+    <color name="white_logo">#FF2A2E39</color>
+    <color name="antenas_color">#FF26D2A0</color>
+
 </resources>
